# openprice-api

./: .env.example  .gitignore  LICENSE.txt  README.md  openprice-api.service  pyproject.toml
app/: config.py  csv_adapter.py  duckdb_client.py  main.py  registry.py  schemas.py
app/routers/: assets.py  compare.py  confidence.py  config_router.py  datasets.py  health.py  prices.py  provenance.py
app/services/: confidence_service.py  price_service.py  provenance_service.py
config/: openprice.yaml
tests/: conftest.py  test_confidence.py  test_config.py  test_csv_adapter.py  test_integration_prices.py  test_prices.py  test_registry.py
